# fun_with_fonts

./: .gitignore  README.md  copy_and_rename_by_ext.py  copy_by_extension.bash  manual_sort.py  render_all.bash
font_rendering/: CMakeLists.txt  benchmark.csv  build.sh  first.cpp  full_whitelist.txt  once.cpp  render_bench.cpp  renderer.h  second.cpp  third.cpp
font_rendering/include/font_rendering/: levenshtein.h  recursive_font_mapper.h  renderer.h
font_rendering/scripts/: compute_sizes.py  find_best_sizes.py  render_alphabet_lower.bash  render_alphabet_upper.bash  render_numbers.bash  render_numbers_small.bash  render_ocr_line.bash
font_rendering/src/: identify_duplicates.cpp  move_bad_fonts.cpp  move_by_ocr.cpp  move_duplicates.cpp  ocr_demo.cpp  ocr_opt.py  ocr_stats.cpp  render_atlas.cpp  renderer.cpp  show_atlas.cpp  standalone_sentences.cpp
font_rendering/test/: ascii_atlas.py  ascii_atlas_single.py  image_write.cpp  levenshtein_test.cpp  ocr_line.py  recursive_font_list.cpp  render_bench.cpp  render_test.cpp
pytorch/: cifar10.py  mnist-pl.py  mnist_pl2.py  mnist_pl_vae.py  mnist_vae.py  v1.py  vae_4.py
pytorch/ddp_vae/: loaders.py  meanstd.py  model_simple.py  train.py
pytorch/jp/: alphabet_classification.ipynb  tutorial.ipynb  vae_4.ipynb
pytorch/letter_vae/: loaders.py  model.py
pytorch/multi_classification/: loaders.py  meanstd.py  model_simple.py  quantization.py  train.py
pytorch/multi_letter_vae/: loaders.py  model_simple.py  pil_test.py  train.py
pytorch/pl_multi_vae/: loaders.py  main.py  search_hidden.sh
sources/: copy_and_rename_by_ext.py  entry_count.py  infinite_unzip.py  make_train_test_split.py  scrape_dafont.py
